# BreadthFlow

./: .flake8  .gitignore  ABSTRACTION_PLAN.md  BreadthThrust_POC_Requirements_v1.1.md  BreadthThrust_PRD_TechnicalDesign.md  CLEANUP_QUICK_REFERENCE.md  DASHBOARD_CONNECTION_GUIDE.md  DASHBOARD_CONNECTION_SUMMARY.md  DASHBOARD_MODERNIZATION_PLAN.md  DASHBOARD_REFACTOR_PLAN.md  DOCKER_TESTING_GUIDE.md  Dockerfile.automl  Dockerfile.data-pipeline  Dockerfile.feature-engineering  Dockerfile.jupyter  Dockerfile.model-registry  Dockerfile.model-training  Dockerfile.seldon  Dockerfile.test  ENHANCED_BATCH_PROCESSING_PLAN.md  FILE_CLEANUP_MAPPING.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STEPS.md  INTEGRATION_STATUS.md  LICENSE  ML_QUICK_START.md  ML_TRAINING_IMPLEMENTATION_PLAN.md  PHASE_5_COMPLETION_SUMMARY.md  PIPELINE_CONTROL_IMPLEMENTATION.md  POC_Requirements_Breadth_Thrust_2Weeks.md  PROJECT_MAINTENANCE_GUIDE.md  README.md  TASK_STATUS.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_STRATEGY.md  TIMEFRAME_AGNOSTIC_PLATFORM_PLAN.md  TROUBLESHOOTING_NOTEBOOK.md  __init__.py  bf-container  cleanup_repo.sh  (+20 more)
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml
airflow/: airflow.cfg
airflow/dags/: data_ingestion_dag.py  feature_engineering_dag.py
airflow/logs/scheduler/: latest
backtests/: __init__.py  engine.py  metrics.py
cli/: Dockerfile.simple  __init__.py  basic_spark_job.py  bf.py  bf_abstracted.py  bf_abstracted_docker.py  bf_minio.py  complete_minio_poc.py  comprehensive_web_dashboard.py  container_cli.py  create_clean_dashboard.py  create_kibana_dashboards.py  dashboard_connector.py  dashboard_integration.py  dashboard_server_simple.py  direct_spark_runner.py  docker_runner.py  elasticsearch_logger.py  enhanced_bf_minio.py  enhanced_pipeline.py  fix_kibana_dashboard.py  init_timeframe_database.py  integrated_monitoring.py  kafka_demo.py  kibana_enhanced_bf.py  kibana_manual_setup.py  local_spark_test.py  minio_working_runner.py  pipeline_controller.py  pipeline_dashboard.py  pipeline_summary.py  poc_working_runner.py  postgres_dashboard.py  postgres_dashboard_backup.py  real_kafka_integration_test.py  robust_delta_runner.py  setup_kibana_dashboards.py  simple_container_cli.py  simple_dashboard.py  simple_delta_runner.py  (+19 more)
cli/database/: __init__.py  connection.py  pipeline_queries.py  signals_queries.py
cli/handlers/: __init__.py  api_handler.py  commands_handler.py  dashboard_handler.py  parameters_handler.py  pipeline_handler.py  signals_handler.py  training_handler.py
cli/static/css/: dashboard.css
cli/static/js/: dashboard.js
cli/templates/: base.html  dashboard.html
config/: global.yaml
data/: symbols.json
data_pipeline/: __init__.py  data_ingestion_service.py  data_pipeline_api.py  data_validation_service.py  minio_storage_service.py
docs/: API_REFERENCE.md  ML_PIPELINE_GUIDE.md  QUICK_START.md  TROUBLESHOOTING.md  airflow_comparison.md  demo_guide.md  infrastructure_diagram.md  infrastructure_guide.md  kibana_dashboard_guide.md  monitoring_guide.md  production_architecture.md  running_modes.md  symbol_lists.md
experiments/multi_source_analysis/: config.yaml  run_experiment.py
fastapi_app/: .env  Dockerfile  main.py  requirements.txt
fastapi_app/apps/commands/: models.py  routes.py  schemas.py  utils.py
fastapi_app/core/: config.py  database.py  dependencies.py  exceptions.py
fastapi_app/shared/: models.py  websocket.py
features/: __init__.py  ad_features.py  automated_feature_engineering.py  feature_engineering_api.py  feature_engineering_service.py  feature_utils.py  financial_fundamentals.py  ma_features.py  market_microstructure.py  mcclellan.py  microstructure_features.py  technical_indicators.py  time_features.py  zbt.py
features/common/: __init__.py  config.py  io.py  symbols.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/services/: api.ts  (+1 more)
infra/: Dockerfile.dashboard  Dockerfile.spark  docker-compose.yml  requirements.txt
ingestion/: __init__.py  data_fetcher.py  replay.py
model/: __init__.py  pipeline_metadata.py  pipeline_runner.py  scoring.py  signal_generator.py  timeframe_agnostic_backtest.py  timeframe_agnostic_fetcher.py  timeframe_agnostic_signals.py  timeframe_config.py  timeframe_enhanced_storage.py
model/automl/: __init__.py  auto_sklearn_integration.py  automl_api.py  automl_manager.py  h2o_integration.py  tpot_integration.py
model/backtesting/: __init__.py  backtest_config.py  backtest_engine_interface.py  trade_record.py
model/config/: __init__.py  configuration_manager.py  schemas.py
model/data/: __init__.py  legacy_adapter.py  universal_data_fetcher.py
model/logging/: __init__.py  enhanced_logger.py  error_handler.py  error_recovery.py
model/orchestration/: __init__.py  pipeline_orchestrator.py  system_monitor.py  workflow_manager.py
model/registry/: __init__.py  component_registry.py  model_registry.py  model_registry_api.py  register_components.py
model/signals/: __init__.py  composite_signal_generator.py  signal_config.py  signal_generator_interface.py
model/training/: __init__.py  experiment_manager.py  hyperparameter_optimizer.py  model_trainer.py  model_training_api.py  simple_hyperparameter_optimizer.py
monitoring/prometheus/: prometheus.yml
notebooks/: multi_source_training_example.ipynb  test_complete_workflow.py  test_ml_pipeline.ipynb
notebooks/.ipynb_checkpoints/: multi_source_training_example-checkpoint.ipynb
scripts/: check_status.sh  cleanup_old_files.sh  kafka_demo.sh  quick_real_test.sh  quick_test.sh  real_data_flow_test.sh  real_kafka_integration_test.sh  real_time_test_plan.sh  restart_infrastructure.sh  run_demo.sh  run_tests.sh  setup.sh  start_infrastructure.sh  stop_infrastructure.sh
seldon/: __init__.py  ab_test_config.yaml  breadthflow_model.py  seldon_deployment.yaml  seldon_manager.py
sql/: timeframe_schema.sql
streaming/: __init__.py
test_config/: test.yaml
tests/: conftest.py
tests/fixtures/: test_data.py
tests/unit/: test_api_endpoints.py  test_signal_generation.py
(+62 files in other folders)
